--- a/Newsletter -StartupM3 (Con Imagen)/newsletter.html
+++ b/Newsletter -StartupM3 (Con Imagen)/newsletter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>A Responsive Email Template</title>
+<title>StartupM3 Ecowork</title>
 <!--
 
     An email present from your friends at Litmus (@litmusapp)
@@ -43,7 +43,17 @@
     #auxheader{
         border-bottom: solid #00C1A9;
     }
-
+    a{
+        text-decoration: none;
+        color: inherit;
+    }
+    a:visited{
+        text-decoration: none;
+        color: inherit;
+    }
+    a:hover{
+        color: #606060;
+    }
     /* MOBILE STYLES */
     @media screen and (max-width: 525px) {
 
@@ -175,7 +185,7 @@
                                             <td align="center" style="font-size: 25px; font-family: 'Josefin Sans', sans-serif; color: #00C1A9; padding-top: 30px;" class="padding">NOTICIAS EN STARTUPM3</td>
                                         </tr>
                                         <tr>
-                                            <td style="padding: 20px 0 0 0; font-size: 16px; line-height: 18px; font-family: 'Source Sans Pro', sans-serif; color: #4d4d4d;" class="padding">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, leo a ullamcorper feugiat, ante purus sodales justo, a faucibus libero lacus a est. Aenean at mollis ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, leo a ullamcorper feugiat, ante purus sodales justo, a faucibus libero lacus a est. Aenean at mollis ipsum.</td>
+                                            <td style="padding: 20px 0 0 0; font-size: 16px; line-height: 22px; font-family: 'Source Sans Pro', sans-serif; color: #4d4d4d;" class="padding">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, leo a ullamcorper feugiat, ante purus sodales justo, a faucibus libero lacus a est. Aenean at mollis ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, leo a ullamcorper feugiat, ante purus sodales justo, a faucibus libero lacus a est. Aenean at mollis ipsum.</td>
                                             <!-- INSTRUCCIONES: PARA AGREGAR "ENTERS" AL TEXTO ESCRIBIR <br> -->
                                         </tr>
                                     </table>
@@ -202,7 +212,7 @@
                                     <!-- COPY -->
                                     <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                         <tr>
-                                            <td align="center" style="font-size: 18px; font-family: 'Source Sans Pro', sans-serif; color: #00C1A9; padding-top: 30px; padding-bottom: 5px; line-height: 20px;" class="padding">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, leo a ullamcorper feugiat, ante purus sodales justo, a faucibus libero lacus a est. Aenean at mollis ipsum.</td>
+                                            <td align="center" style="font-size: 18px; font-family: 'Source Sans Pro', sans-serif; color: #00C1A9; padding-top: 30px; padding-bottom: 5px; line-height: 24px;" class="padding">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, leo a ullamcorper feugiat, ante purus sodales justo, a faucibus libero lacus a est. Aenean at mollis ipsum.</td>
                                         </tr>
                                     </table>
                                 </td>
