--- a/Newsletter -StartupM3 (Con Imagen)/newsletter.html
+++ b/Newsletter -StartupM3 (Con Imagen)/newsletter.html
@@ -143,7 +143,7 @@
                         <!-- ACÁ SE CAMBIA EL LINK AL QUE QUIERAS QUE LLEVE EL LOGO-->
                         <a href="http://www.startupm3.com.ar/" target="_blank">
                         <!-- ^^^^^^^^^^^^^^^^^^^^^ -->
-                            <img alt="Logo" src="logo-01.png" width="25%" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
+                            <img alt="Logo" src="http://www.rooster.com.ar/m3/logo-01.png" width="25%" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #ffffff; font-size: 16px;" border="0">
                         </a>
                     </td>
                 </tr>
