--- a/Newsletter -StartupM3 (Sin Imagen)/newslettertodoleft.html
+++ b/Newsletter -StartupM3 (Sin Imagen)/newslettertodoleft.html
@@ -186,7 +186,7 @@
                                     <!-- BULLETPROOF BUTTON -->
                                     <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                         <tr>
-                                            <td align="center" style="padding-top: 25px;" class="padding">
+                                            <td align="left" style="padding-top: 25px;" class="padding">
                                                 <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
                                                     <tr>
                                                     	<td align="center" style="border-radius: 3px;" bgcolor="#ff5335"><a href="http://www.startupm3.com.ar/" target="_blank" style="font-size: 16px; font-family: 'Josefin Sans', sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #ff5335; display: inline-block;" class="mobile-button">VER LINK &rarr;</a></td>
@@ -229,7 +229,7 @@
             <!-- UNSUBSCRIBE COPY -->
             <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" style="max-width: 500px;" class="responsive-table">
                 <tr>
-                    <td align="center" style="font-size: 12px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#808080; text-decoration: none;">
+                    <td align="left" style="font-size: 12px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#808080; text-decoration: none;">
                         Visitanos en <a href="http://www.startupm3.com.ar/">www.startupm3.com.ar</a> - <a href="https://www.facebook.com/StartupM3Ecowork">facebook.com/StartupM3Ecowork</a>
                         <br>
                         © StartUp M3 Bs. As. 2016 | Pasaje Martín Malharro 2674, CABA | Tel.(011) 5263-2637
